testing adding to github

--- a/intro-to-html.html
+++ b/intro-to-html.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi exercitationem iure qui reiciendis rerum, similique! A accusamus dolor dolorem eum exercitationem fugit hic incidunt nam perferendis praesentium quia, reiciendis reprehenderit.</p>
+<p>..Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi exercitationem iure qui reiciendis rerum, similique! A accusamus dolor dolorem eum exercitationem fugit hic incidunt nam perferendis praesentium quia, reiciendis reprehenderit.</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet eos et iste laudantium libero quos saepe sunt totam unde! Assumenda commodi corporis eum laboriosam minima non quis quo velit veritatis.</p>
 <button id="toggle">toggle paragraph</button>
