--- a/practiceINclassHTML/JSFunctions.html
+++ b/practiceINclassHTML/JSFunctions.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>JSFunctions</h1>
+
+testing adding stuff to GitHub
 <script src="../practiceINclass/JSFunctions.js"></script>
 </body>
 </html>
