--- a/practiceINclassHTML/JSFunctions.html
+++ b/practiceINclassHTML/JSFunctions.html
@@ -8,6 +8,7 @@
 <h1>JSFunctions</h1>
 
 testing adding stuff to GitHub
+practicing adding code to gitHub
 <script src="../practiceINclass/JSFunctions.js"></script>
 </body>
 </html>
