--- a/practiceINclassHTML/miniExercises.html
+++ b/practiceINclassHTML/miniExercises.html
@@ -7,5 +7,5 @@
 <body>
 
 </body>
-<script src="practiceINclass/miniExercises.js"></script>
+<script src="../practiceINclass/miniExercises.js"></script>
 </html>
