--- a/loops.html
+++ b/loops.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LoopsExercises</title>
+    <title>Loops</title>
 </head>
 <body>
 <script src="js/for_loops.js"></script>
 <script src="js/while.js"></script>
+<script src="js/break_and_continue.js"></script>
 </body>
 </html>
