--- a/practiceForExamsHomework.html
+++ b/practiceForExamsHomework.html
@@ -23,22 +23,38 @@
         mirror([1,3,4]) // returns false
         mirror(123) // returns false
  */
-    function mirror(aString){
+    // my long answer T__T:
+    // function mirror(aString){
+    //
+    //     if (typeof aString === "string" || typeof aString === "number"){
+	// 		var splitAstring = aString.toString().split("");
+	// 		var reverseAstring = splitAstring.reverse();
+	// 		var joinAstring = reverseAstring.join("");
+	// 		 return joinAstring;
+    //     } else {
+	// 		return false;
+    //     }
+    // }
+    // console.log(mirror("cat"));
+    // console.log(mirror(123));
+	// console.log(mirror(null));
+	// console.log(mirror([1,2,3]));
 
-        if (typeof aString === "string" || typeof aString === "number"){
-			var splitAstring = aString.toString().split("");
-			var reverseAstring = splitAstring.reverse();
-			var joinAstring = reverseAstring.join("");
-			 return joinAstring;
-        } else {
-			return false;
-        }
-    }
-    console.log(mirror("cat"));
-    console.log(mirror(123));
-	console.log(mirror(null));
-	console.log(mirror([1,2,3]));
 
+    // //"how to reverse a string in js"
+    // // instructors ans:
+    // function mirror(input){
+	// if (typeof input !== "string"){
+	// 	return false;
+    //     }
+	// 	return input.split("").reverse().join("");
+    // }
+    // //dont need else because of how the return statement works
+	// console.log(mirror("cat"));
+	// console.log(mirror(123));
+	// console.log(mirror(null));
+	// console.log(mirror([1,2,3]));
+	// //
 
 </script>
 </body>
