--- a/intro-to-html2.html
+++ b/intro-to-html2.html
@@ -5,16 +5,26 @@
     <title>HTML!</title>
     <!--
     <link rel="icon" type="" href="">
+     https://www.favicon-generator.org/search/PURPLE/
     -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/faviconD.ico">
 </head>
 <body>
 <h1>Intro to HTML</h1>
-<img src="images/hector-falcon-2.jpg" width = "600" height ="300">
+<!-- an image is an inline tag -->
+<img src="images/hector-falcon-2.jpg">
 <!-- to autofill type "lorem"+tab
 keep the css to style... em style...
 better to resize the image in an image editor than make the html do it, for speed efficency.--->
-<p>Photo by: <em>Hector Falcon</em> courtesy of <a href="https://unsplash.com/photos/ZJ9POJfmfL4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">this website</a>.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi debitis earum et hic, in iure laborum magni minima, molestias nam neque, nihil perspiciatis repellendus similique soluta voluptas voluptates? Hic! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque blanditiis ea enim neque nobis, provident quia quo repellat reprehenderit saepe sit tempore voluptates, voluptatum! A ad adipisci aliquid assumenda fugit.</p>
+<p>Photo by: <em>Hector Falcon</em> courtesy of <a href="https://unsplash.com/photos/ZJ9POJfmfL4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Unsplash</a>.</p>
+<!-- <a href="loops.html">take it to another page I made</a> -->
+<h2>H2 Title</h2>
+<p>A paragraph begins with Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi debitis earum et hic, in iure laborum magni minima, molestias nam neque, nihil perspiciatis repellendus similique soluta voluptas voluptates? Hic! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque blanditiis ea enim neque nobis, provident quia quo repellat reprehenderit saepe sit tempore voluptates, voluptatum! A ad adipisci aliquid assumenda fugit.</p>
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
 </body>
 </html>
