--- a/intro-to-html2.html
+++ b/intro-to-html2.html
@@ -6,25 +6,55 @@
     <!--
     <link rel="icon" type="" href="">
      https://www.favicon-generator.org/search/PURPLE/
+     labeling helps accessibility.
     -->
     <link rel="icon" type="image/x-icon" href="images/faviconD.ico">
 </head>
-<body>
-<h1>Intro to HTML</h1>
+	<body>
+		<header><h1>Intro to HTML</h1></header>
+			<main>
+                <nav>
+	                <a href="">Home</a>
+	                <a href="">Artwork</a>
+	                <a href="">Products</a>
+                    <a href="">About</a>
+                    <a href="">Contact</a>
+                </nav>
 <!-- an image is an inline tag -->
-<img src="images/hector-falcon-2.jpg">
+				<img src="images/hector-falcon-2.jpg" alt="A vacation spot">
 <!-- to autofill type "lorem"+tab
 keep the css to style... em style...
-better to resize the image in an image editor than make the html do it, for speed efficency.--->
-<p>Photo by: <em>Hector Falcon</em> courtesy of <a href="https://unsplash.com/photos/ZJ9POJfmfL4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Unsplash</a>.</p>
+better to resize the image in an image editor than make the html do it, for speed efficiency.--->
+				<p>Photo by: <em>Hector Falcon</em> courtesy of <a href="https://unsplash.com/photos/ZJ9POJfmfL4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Unsplash</a>.</p>
 <!-- <a href="loops.html">take it to another page I made</a> -->
-<h2>H2 Title</h2>
-<p>A paragraph begins with Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi debitis earum et hic, in iure laborum magni minima, molestias nam neque, nihil perspiciatis repellendus similique soluta voluptas voluptates? Hic! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque blanditiis ea enim neque nobis, provident quia quo repellat reprehenderit saepe sit tempore voluptates, voluptatum! A ad adipisci aliquid assumenda fugit.</p>
-<ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
-</body>
+				<h2>Vacation Information</h2>
+				<p><q>A paragraph begins with...</q> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi debitis earum et hic, in iure laborum magni minima, molestias nam neque, nihil perspiciatis repellendus similique soluta voluptas voluptates? Hic! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque blanditiis ea enim neque nobis, provident quia quo repellat reprehenderit saepe sit tempore voluptates, voluptatum! A ad adipisci aliquid assumenda fugit.</p>
+				<h3>Places to Visit</h3>
+				<ul>
+				    <li>Alaska, Northern Lights</li>
+				    <li>Washington State, World's Largest Pho</li>
+				    <li>Canda, Victoria Island</li>
+				    <li>Japan, Tokyo City</li>
+				</ul>
+
+
+				<table>
+                    <tr>
+                        <th>Print Size</th>
+                        <th>Price x Hour</th>
+                        <th>Medium</th>
+                    </tr>
+                    <tr>
+                        <td>12 x 12</td>
+                        <td>15</td>
+                        <td>Digital</td>
+                    </tr>
+                    <tr>
+                        <td>12 x 12</td>
+                        <td>15</td>
+                        <td>Acrylic Paint</td>
+                    </tr>
+				</table>
+</main>
+	</body>
 </html>
