--- a/welcome.html
+++ b/welcome.html
@@ -29,6 +29,7 @@
 				<li>Increase Success by 20%</li>
 				<li>Increase Business by 30%</li>
 			</ul>
+			<hr>
 			<h2>Company Vision</h2>
 			<div class="row">
 				<div class="column">
@@ -73,7 +74,7 @@
 					<td>Unlimited Support</td>
 				</tr>
 			</table><br>
-			<em>All products come with out quality guarantee™️</em>.<br>
+			<em>All products come with out quality guarantee&trade;</em>.<br>
 			<br><a href="#top">Go to the top of the page.</a>
 		</main>
 </body>
