--- a/github.html
+++ b/github.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<header>
+		<fieldset>
 		<nav>
 			<img src="images/gitfav.png">
 			<a href="">Pull requests</a>
@@ -14,6 +15,7 @@
 			<a href="">Explore</a>
 			<hr>
 		</nav>
+		</fieldset>
 	</header>
 	<h1><img src="images/codeuphead.jpeg">Codeup</h1>
 <nav>
