the importance of stylesheets, review exercise complete.

--- a/intro-to-html2.html
+++ b/intro-to-html2.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--<head> resources the pages need to store information is in the head-->
+<!--html : info to display on the page-->
 <head>
     <meta charset="UTF-8">
     <title>HTML!</title>
@@ -9,8 +11,11 @@
      labeling helps accessibility.
     -->
     <link rel="icon" type="image/x-icon" href="images/faviconD.ico">
+	<link rel="stylesheet" href="css/intro-to-css.css">
 </head>
 	<body>
+<!--	Use a style attribute to set the font color of the h1 element to red.-->
+<!--Remove any style attributes and embedded stylesheets. From this point forward, we will only be working with external stylesheets.-->
 		<header><h1>Intro to HTML</h1></header>
 			<main>
                 <nav>
