Reviewing exercises and CSS with lecture

--- a/intro-to-html2.html
+++ b/intro-to-html2.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--put your links after the title-->
 <!--<head> resources the pages need to store information is in the head-->
 <!--html : info to display on the page-->
 <head>
     <meta charset="UTF-8">
     <title>HTML!</title>
+<!--	put your links after the title-->
     <!--
     <link rel="icon" type="" href="">
      https://www.favicon-generator.org/search/PURPLE/
      labeling helps accessibility.
     -->
-    <link rel="icon" type="image/x-icon" href="images/faviconD.ico">
 	<link rel="stylesheet" href="css/intro-to-css.css">
+    <link rel="icon" type="image/x-icon" href="images/faviconD.ico">
 </head>
 	<body>
 <!--	Use a style attribute to set the font color of the h1 element to red.-->
 <!--Remove any style attributes and embedded stylesheets. From this point forward, we will only be working with external stylesheets.-->
-		<header><h1>Intro to HTML</h1></header>
+		<header><h1 class="fancy-header">Intro to HTML</h1></header>
 			<main>
                 <nav>
 	                <a href="">Home</a>
@@ -26,6 +28,7 @@
                     <a href="">Contact</a>
                 </nav>
 				<hr>
+				<main class ="theMain">
 <!-- an image is an inline tag -->
 				<img src="images/hector-falcon-2.jpg" alt="A vacation spot">
 <!-- to autofill type "lorem"+tab
