CSS lecture and practice before exercise

--- a/welcome.html
+++ b/welcome.html
@@ -3,6 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Welcome HTML Exercise</title>
+	<style>
+		body {
+			/*font-family: sans-serif;*/
+			/*font-weight: lighter;*/
+			/*font-size: 15px;*/
+			font: 15px sans-serif;
+			font-weight: lighter;
+		}
+		table {
+			text-align: center;
+			font-family: Serif;
+		}
+		
+		ul li {
+			list-style: hiragana;
+			color: red;
+		}
+	</style>
 </head>
 <body>
 <script src="js/welcome-js.js"></script>
