--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--try avoiding DIVS...-->
 <head>
 	<meta charset="UTF-8">
 	<title>Welcome HTML Exercise</title>
@@ -65,6 +66,9 @@
 		a:hover {
 			color: #d7c1a9;
 		}
+		.flex-container > img {
+		border: 2px solid #d7c1a9;
+		}
 	</style>
 </head>
 <body>
@@ -95,26 +99,13 @@
 			</ul>
 			<hr>
 			<h2>Company Vision</h2>
-			<div class="row">
-				<div class="column">
+			<section class ="flex-container">
 					<img src="images/laptops.jpg">
-				</div>
-			</div>
-			<div class="row">
-				<div class="column">
 					<img src="images/manshadow.jpg">
-				</div>
-			</div>
-			<div class="row">
-				<div class="column">
 					<img src="images/sunset.jpg">
-				</div>
-			</div>
-			<div class="row">
-				<div class="column">
 					<img src="images/officeteam2.jpg">
-				</div>
-			</div>
+			</section>
+			<br>
 			<h2>Our Product</h2>
 			<table class="centerTheTable">
 				<tr>
@@ -138,7 +129,7 @@
 					<td>Unlimited Support</td>
 				</tr>
 			</table><br>
-			<em>All products come with out quality guarantee&trade;</em>.<br>
+			<em>All products come with our quality guarantee&trade;</em>.<br>
 			<br><a href="#top">Go to the top of the page.</a>
 			<br>
 			<br>
