--- a/welcome.html
+++ b/welcome.html
@@ -25,7 +25,7 @@
 			/*font-size: 15px;*/
 			font: 15px Montserrat;
 			font-weight: lighter;
-			width: 60%;
+			width: 70%;
 			margin: auto;
 		}
 		hr {
@@ -66,8 +66,12 @@
 		a:hover {
 			color: #d7c1a9;
 		}
-		.flex-container > img {
-		border: 2px solid #d7c1a9;
+		.flex-container {
+			display: flex;
+			flex-wrap: wrap;
+		}
+		.flex-item:nth-of-type(3) {
+			border: 5px solid crimson;
 		}
 	</style>
 </head>
@@ -100,10 +104,10 @@
 			<hr>
 			<h2>Company Vision</h2>
 			<section class ="flex-container">
-					<img src="images/laptops.jpg">
-					<img src="images/manshadow.jpg">
-					<img src="images/sunset.jpg">
-					<img src="images/officeteam2.jpg">
+					<img src="images/laptops.jpg" class ="flex-item">
+					<img src="images/manshadow.jpg" class ="flex-item">
+					<img src="images/sunset.jpg" class ="flex-item">
+					<img src="images/officeteam2.jpg" class ="flex-item">
 			</section>
 			<br>
 			<h2>Our Product</h2>
