--- a/welcome.html
+++ b/welcome.html
@@ -68,13 +68,17 @@
 		}
 		.flex-container {
 			display: flex;
+			flex-direction: row;
+			flex-basis: auto;
 			flex-wrap: wrap;
+			justify-content: space-evenly;
 		}
-		.flex-item:nth-of-type(3) {
+		.flex-item:nth-of-type(2) {
 			border: 5px solid crimson;
 		}
 	</style>
 </head>
+<!--when you absolute postion something, it takes it out and goes to where the other item is-->
 <body>
 <script src="js/welcome-js.js"></script>
 	<header><h1>Welcome to Veridian Dynamics!</h1></header>
