fixing typos, reviewing work

--- a/intro-to-html2.html
+++ b/intro-to-html2.html
@@ -12,7 +12,7 @@
      https://www.favicon-generator.org/search/PURPLE/
      labeling helps accessibility.
     -->
-	<link rel="stylesheet" href="css/intro-to-css.css">
+	<link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="images/faviconD.ico">
 </head>
 	<body>
