--- a/welcome.html
+++ b/welcome.html
@@ -78,7 +78,7 @@
 		}
 	</style>
 </head>
-<!--when you absolute postion something, it takes it out and goes to where the other item is-->
+<!--when you absolute position something, it takes it out and goes to where the other item is-->
 <body>
 <script src="js/welcome-js.js"></script>
 	<header><h1>Welcome to Veridian Dynamics!</h1></header>
