--- a/positioning-exercise.html
+++ b/positioning-exercise.html
@@ -21,11 +21,19 @@
 			padding: 1em;
 			width: 300px;
 			border-radius: 3px;
+			position: fixed;
+			bottom: 20px;
+			right: 20px;
 			/* TODO: the popup should set in place 20px away from the bottom right corner screen, even when scrolling */
-			
+			/*position: fixed;*/
+			/*bottom: 20px;*/
+			/*right: 20px;*/
 		}
 		
 		.x-icon {
+			position: absolute;
+			right: 4px;
+			top: 4px;
 			border: 1px solid darkgrey;
 			border-radius: 1px;
 			box-sizing: border-box;
@@ -37,7 +45,9 @@
 			padding: 2px 2px 0 2px;
 			color: darkgray;
 			/* TODO: the 'x' icon should be 4px away from the top right corner of the popup */
-			
+			/*position: absolute;*/
+			/*right: 4px;*/
+			/*top: 4px;*/
 		}
 		
 		.logo {
@@ -45,14 +55,21 @@
 			display: block;
 			z-index: 1;
 			/* TODO: the logo should straddle the top line. Move it up 40px from it's current position */
-			
+			position: relative;
+			bottom: 40px;
+			/*position is not: absolute;*/
+			/*top: -40px;*/
 		}
 		
 		p {
 			margin: 0;
 			/* TODO: the paragraph is too low and should be moved up 20px */
+			position: relative;
 			
+			bottom: 20px;
 		}
+	/*	relative you have to think of it the opposite way
+	top is pulling*/
 	
 	</style>
 </head>
