--- a/positioning-exercise.html
+++ b/positioning-exercise.html
@@ -59,6 +59,8 @@
 			bottom: 40px;
 			/*position is not: absolute;*/
 			/*top: -40px;*/
+		/*	from its current position, relative...
+		https://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/*/
 		}
 		
 		p {
@@ -69,7 +71,7 @@
 			bottom: 20px;
 		}
 	/*	relative you have to think of it the opposite way
-	top is pulling*/
+	top is pulling. bottom is pushing it up*/
 	
 	</style>
 </head>
