--- a/welcome.html
+++ b/welcome.html
@@ -69,9 +69,9 @@
 		.flex-container {
 			display: flex;
 			flex-direction: row;
-			flex-basis: auto;
+			justify-content: space-between;
+			align-items: center;
 			flex-wrap: wrap;
-			justify-content: space-evenly;
 		}
 		.flex-item:nth-of-type(2) {
 			border: 5px solid crimson;
