finish flexbox exercises at home.

--- a/flexboxNotes.html
+++ b/flexboxNotes.html
@@ -4,14 +4,25 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 	<style>
-/*display: flex; to use flex, you need the "display" property and value of "flex".
+		body{
+			display: flex;
+			align-items: ;
+		}
+/*
+wrap is not enabled by default.
+display: flex; to use flex, you need the "display" property and value of "flex".
 flex-direction: (default is row)
 justify-content: (default is flex-start)
 align-items: (default is stretch)
+all flex items have a default of 0
+https://jreich5-flexbox-trainer.glitch.me/
 https://java.codeup.com/html-css/css-i/flexbox/flexbox-fundamentals/
 https://flexboxfroggy.com/
+align-content: (default is normal)
+https://www.w3schools.com/cssref/css3_pr_align-items.asp
+flex-grow is for items.
+align self does not reorder elements.
 */
- */
 	</style>
 </head>
 <body>
