progress on JS problem. trying to figure out how to get the sum and not concatenate the numbers.

--- a/studying-for-exam-problems.html
+++ b/studying-for-exam-problems.html
@@ -32,22 +32,32 @@
 	var array3 = ["bob", 100, null]
 	var array5 = ["dennise", null, NaN]
 	
+//i needed to check if the array contained all strings, so I made a function
 	function isItString(array){
 		if (typeof array === "string") return true;
 		else return false;
 	}
-function addTheArray(array){
-		if (isNaN(parseFloat(array))){
-			return array.reduce(Math.sum);
-			} else return array;
+	// I needed to check if the array had numbers to return the sum, so I'm struggling to make a function that returns the sum while looking through the index........ returning the sum of the array
+	function addTheArray(array){
+		if(isNaN(parseFloat(array))){
+			return array.join("");
+		}
+		else {
+			for (var i = 0; i < array.length; i++) {
+				return "I need to add these"
+			}
+		}
 }
 
+console.log(addTheArray(array1));
+// the final function that takes the array, scans the array, and returns the length, a boolean value of true, if it has strings, and the combined result, /**trying to figure out how to return the sum and not the concatenated numbers.**/
 	function analyzeArray(array){
 		 for (var i = 0; i < array.length; i++){
 			 return {
 				 lengthOfArray: array.length,
 				 containsAllStrings: array.every(isItString),
-				 combineResult: addTheArray()
+				 combineResult: addTheArray(array)
+				 // array.join("").toString()
 			 }
 		 }
 	}
