taking notes about flexbox, slightly trying out a navigation bar, still need to display icons.

--- a/flexboxNotes.html
+++ b/flexboxNotes.html
@@ -9,6 +9,7 @@
 			align-items: ;
 		}
 /*
+in the flex item give margin auto 0 to center
 wrap is not enabled by default.
 display: flex; to use flex, you need the "display" property and value of "flex".
 flex-direction: (default is row)
