--- a/media-queries.html
+++ b/media-queries.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<main>
     <div class="alert-info hidden-on-desktop">
         <a href="#main">Skip to main content</a>
     </div>
@@ -36,5 +37,6 @@
 
         </div>
     </footer>
+</main>
 </body>
 </html>
