--- a/order-pizza.html
+++ b/order-pizza.html
@@ -19,7 +19,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<ul class="navbar-nav mb-2 mb-lg-0">
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Order online</a>
 				</li>
@@ -46,16 +46,21 @@
 				<button class="btn btn-light btn-outline-secondary mx-auto text-nowrap" type="submit">Search stores near
 					you!</button>
 			</form>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<i class="fa-solid fa-user-plus"></i><a class="nav-link active" aria-current="page"
+					                                         href="#">Sign up</a>
+				</li></ul>
 		</div>
 	</div>
 </nav>
-<div class="container-fluid">
-	<h1 class="display-4">Welcome to Pizza World</h1>
+<div class="container-fluid px-0 py-5 my-4 bg-light text-center" style="background-image:url('images/coffeekeyboard.jpg')">
+	<h1 class="display-4 bg-light opacity-75">Welcome to Pizza World</h1>
 </div>
 <br><h3>Build your own pizza!</h3>
 <!--card-->
 <div class="card min-vw-75">
-	<div class="card-header">
+	<div class="card-header bg-primary text-white">
 		Choose a size and crust
 	</div>
 	<div class="card-body ">
@@ -67,8 +72,18 @@
 			</div>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
-				<li class="list-group-item">A second item</li>
-				<li class="list-group-item">A third item</li>
+				<li class="list-group-item"><div class="form-check">
+					<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+					<label class="form-check-label" for="flexRadioDefault1">
+						Small(10")
+					</label>
+				</div></li>
+				<li class="list-group-item"><div class="form-check">
+					<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+					<label class="form-check-label" for="flexRadioDefault1">
+						Medium(12")
+					</label>
+				</div></li>
 			</ul>
 			</div></div>
 		<div class="card-body border">
@@ -78,12 +93,22 @@
 			</div>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item">Thin enough for optimum crispy to crunchy ration.</li>
-				<li class="list-group-item">A second item</li>
-				<li class="list-group-item">A third item</li>
+				<li class="list-group-item"><div class="form-check">
+					<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+					<label class="form-check-label" for="flexRadioDefault1">
+						Medium(12")
+					</label>
+				</div></li>
+				<li class="list-group-item"><div class="form-check">
+					<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+					<label class="form-check-label" for="flexRadioDefault1">
+						Large(14")
+					</label>
+				</div></li>
 			</ul>
 		</div></div>
 <!--		card-->
-	</div><div class="card-footer"><p class="text-end"><a href="#" class="btn btn-primary">Select</a></p></div>
+	</div><div class="card-footer text-end"><a href="#" class="btn btn-primary">Select</a></div>
 </div>
 
 
