--- a/order-pizza.html
+++ b/order-pizza.html
@@ -48,7 +48,7 @@
 									you!</button>
 								</form>
 <!--								search bar end/ sign up link start-->
-								<li class="nav-item">
+								<li class="nav-item position-absolute end-0">
 									<a class="nav-link" aria-current="page" href="#">
 										<i class="fa fa-user" aria-hidden="true"></i>
 										Sign up
