Javascript object review and test.

--- a/objects-mini-exercises.html
+++ b/objects-mini-exercises.html
@@ -17,6 +17,15 @@
 // 	// 	- expirationDate
 // 	// 	- datesOfPreviousSips (use an array of strings)
 // 	// - isOpen
+var beverages = {
+	brandName: ["Pepsi", "Coke"],
+	type: ["Soda", "Soda"],
+	volumeInLiters: ["2L", "2l"],
+	priceInCents: [25],
+	expirationDate:[5/15/2022],
+	datesOfPreviousSips:[2/27/2022],
+	isOpen: [true]
+}
 // 	// Define your objects using both literal syntax to create all properties and values at once and also try defining empty objects and assign property values in separate statements using the dot notation.
 //
 //     //add [] to dateOfPreviousSips
