--- a/resume.html
+++ b/resume.html
@@ -50,16 +50,15 @@
 <div class="container text-center">
 	<h2 class="">Software Developer</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur eaque reiciendis sed voluptates! Accusantium et maxime minus molestiae numquam perspiciatis possimus ut! Deleniti eaque itaque non nostrum odio optio?</p>
-		<div class="container"></div>
-		<nav class ="row">
-		<ul id="info">
-			<li><span id="phone">&#128222;&#32;</span>210-123-1234</li>
-			<li class="py-1">&#9993;&#32;cody@codeup.com</li>
-			<li><span class="fw-bolder fs-5">in </span>@cody-the-duck</li>
-			<li class="pt-1 py-4"><img src="images/GitHub-Mark-20px.png"> @cody-the-duck</li>
+		<nav class="container">
+		<ul id="info" class="row">
+			<div class="col-md-3"><li><span id="phone">&#128222;&#32;</span>210-123-1234</li></div>
+			<div class="col-md-3"><li class="py-1">&#9993;&#32;cody@codeup.com</li></div>
+			<div class="col-md-3"><li><span class="fw-bolder fs-5">in </span>@cody-the-duck</li></div>
+			<div class="col-md-3"><li class="pt-1 py-4"><img src="images/GitHub-Mark-20px.png"> @cody-the-duck</li></div>
 		</ul>
 		</nav>
-		</div>
+		</nav>
 </div>
 <div class="container">
 	<div class="row">
@@ -95,6 +94,8 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolor expedita facilis inventore ipsum nam odit quod sequi vel! Accusamus commodi debitis nisi odit optio totam vero! Fugiat, sit, veniam.</p>
 	</div>
 	</div>
+	
+<!--	adding a line height at the md breakpoint can help the empty space below.-->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
