bom javascript exercise and notes. learning clearInterval. " "

--- a/bom-lecture.html
+++ b/bom-lecture.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+	"use strict";
 	// var count = 0; //out of the function makes it global. better to put it in a var
 	// hey = function(){
 	// 	console.log(count + " seconds have passed");
@@ -22,6 +23,7 @@
 	// }
 	// sayHey();
 	//try to avoid global variables.
+	
 	
 	
 	
