--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -32,18 +32,25 @@
         var mainHeader = document.getElementById("main-header");
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-	   mainHeader.innerHTML += "JavaScript is Cool";
+	   mainHeader.innerHTML += " JavaScript is Cool";
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
-	    document.getElementById()
+	    subHeader.setAttribute("class", "blue");
+		var blues = document.getElementsByClassName("blue");
+		blues[0].style.color = "blue";
 
         // TODO: Uncomment the next line and get all list items
-        // var listItems = ;
+        var listItems = document.getElementsByTagName("li");
 
         // TODO: Set text color on every other list item to grey
+	    // // listItems.setAttribute("class", "grey");
+		// // var greys = document.getElementsByClassName("grey");
+	    for (var i = 0; i < listItems.length; i++) {
+		    listItems[i].style.color = "grey";
+	    }
         // TODO: Set text color of li with dbid = 1 to blue
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
