--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -5,16 +5,25 @@
     <title>DOM: Query and Modify</title>
 </head>
 <style>
+	section {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		background-color: antiquewhite;
+	}
 	ul:last-of-type {
+		/*display: flex;*/
 		list-style: none;
+		background-color: #dfdada;
 	}
 	button {
-		width: 5em;
+		width: 10em;
+		margin: auto;
 		margin-bottom: 1em;
 	}
 </style>
 <body>
-
+<section>
 <h1 id="main-header">Hello World!</h1>
 <ul>
     <li data-dbid="1">Item 1</li>
@@ -23,6 +32,9 @@
     <li data-dbid="4">Item 4</li>
     <li data-dbid="5">Item 5</li>
 </ul>
+</section>
+
+<section>
 <h2 id="sub-header">Hello Again.</h2>
 <p class="sub-paragraph">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -33,15 +45,17 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
+</section>
 
+<section>
 <ul>
-	<li><button>JSisC</button></li>
+	<li><button>Did you know?</button></li>
 	<li><button>1</button></li>
 	<li><button>2</button></li>
 	<li><button>3</button></li>
 	<p></p>
 </ul>
-
+</section>
 <script>
     (function() {
         "use strict";
@@ -50,14 +64,27 @@
 	    // were automatically taking place. For example, the first button
 	    // should set inner html of mainHeader to "JavaScript is Cool".
 		// var buttonOne = document.querySelector("button");
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+		var buttonOne = document.getElementsByTagName("button")[0];
 	    var buttonList = document.querySelectorAll("button");
 		function showAlert() {
-			if (buttonList[0]) {
+			if (buttonList ==! buttonOne) {
+				document.querySelectorAll("h1").innerText = "Hello World!";
+			} else {
 				document.querySelector("h1").innerText = "JavaScript is Cool";
-			} else if (buttonList[1] || buttonList[2] || buttonList[3]) {
-				document.querySelector("h1").innerText = "Hello World!";
 			}
 		}
+				// document.querySelector("h1").innerText = "JavaScript is Cool";
+				// document.querySelector("h1").innerText = "Hello World!";
+			// } else if (buttonList[1] || buttonList[2] || buttonList[3]) {
 		// buttonOne.addEventListener("click", showAlert);
 		
 		
