Javascript exercise fixed

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -76,9 +76,9 @@
 		function showAlert() {
 				document.querySelector("h1").innerText = "JavaScript is Cool";
 		}
-		function changeColor(){
-			document.getElementsByTagName("button").onclick =
-		}
+		// function changeColor(){
+		// 	document.getElementsByTagName("button").onclick =
+		// }
 				// document.querySelector("h1").innerText = "JavaScript is Cool";
 				// document.querySelector("h1").innerText = "Hello World!";
 			// } else if (buttonList[1] || buttonList[2] || buttonList[3]) {
