--- a/js-bonus-problems.html
+++ b/js-bonus-problems.html
@@ -5,6 +5,9 @@
 	<title>Bonus Problems</title>
 </head>
 <style>
+	span {
+		position: relative;
+	}
 	.sectionB {
 		display: flex;
 		justify-content: space-evenly;
@@ -49,7 +52,7 @@
 <body>
 
 <section class="sectionB">
-<div class="redB"><span class="redB">test</span></div>
+<div class="redB"><span>test</span></div>
 <div class="blueB"><span></span></div>
 <div class="yellowB"><span></span></div>
 </section>
