--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -156,6 +156,17 @@
 	    subParagraphs[0].innerHTML = "Mission Accomplished!";
 	    
     })();
+	
+	
+	//instruction : wrapped every section into functions and
+    // document.getElementById("").addEventListener("", functionHere, {once:true});
+    //if you have to declare them more than once, write a variable.
+    // document.getElementById("btn1").addEventListener("click", updateHeader, {once: true});
+    // document.getElementById("btn2").addEventListener("click", updateSubHeader);
+    // document.getElementById("btn3").addEventListener("click", updateLiElements);
+    // document.getElementById("btn4").addEventListener("click", updateSubParagraph);
+
+
 </script>
 </body>
 </html>
